chore: simplifying validators